// Code generated by codegen. DO NOT EDIT.
syntax = "proto3";
package store;
import "github.com/gogo/protobuf/gogoproto/gogo.proto"; 
 
import "github.com/corestoreio/pkg/storage/null/null.proto"; 
option go_package = "store"; 
option (gogoproto.typedecl_all) = false; 
option (gogoproto.goproto_getters_all) = false; 
option (gogoproto.unmarshaler_all) = true; 
option (gogoproto.marshaler_all) = true; 
option (gogoproto.sizer_all) = true; 
option (gogoproto.goproto_unrecognized_all) = false; 
// Store represents a single row for DB table store . Auto generated.
message Store { 
	uint32 store_id= 1 [(gogoproto.customname)="StoreID" ]; 
	null.String code= 2 [(gogoproto.customname)="Code" ,(gogoproto.nullable)=false]; 
	uint32 website_id= 3 [(gogoproto.customname)="WebsiteID" ]; 
	uint32 group_id= 4 [(gogoproto.customname)="GroupID" ]; 
	string name= 5 [(gogoproto.customname)="Name" ]; 
	uint32 sort_order= 6 [(gogoproto.customname)="SortOrder" ]; 
	bool is_active= 7 [(gogoproto.customname)="IsActive" ]; 
	StoreGroup StoreGroup = 8 ; // 1:1 store.group_id => store_group.group_id 
	StoreWebsite StoreWebsite = 9 ; // 1:1 store.website_id => store_website.website_id 
} 
// StoreCollection represents multiple rows for DB table store . Auto generated.
message StoreCollection { 
	repeated Store Data = 1; 
} 
// StoreGroup represents a single row for DB table store_group . Auto generated.
message StoreGroup { 
	uint32 group_id= 1 [(gogoproto.customname)="GroupID" ]; 
	uint32 website_id= 2 [(gogoproto.customname)="WebsiteID" ]; 
	string name= 3 [(gogoproto.customname)="Name" ]; 
	uint32 root_category_id= 4 [(gogoproto.customname)="RootCategoryID" ]; 
	uint32 default_store_id= 5 [(gogoproto.customname)="DefaultStoreID" ]; 
	null.String code= 6 [(gogoproto.customname)="Code" ,(gogoproto.nullable)=false]; 
	StoreWebsite StoreWebsite = 7 ; // 1:1 store_group.website_id => store_website.website_id 
} 
// StoreGroupCollection represents multiple rows for DB table store_group . Auto
// generated.
message StoreGroupCollection { 
	repeated StoreGroup Data = 1; 
} 
// StoreWebsite represents a single row for DB table store_website . Auto
// generated.
message StoreWebsite { 
	uint32 website_id= 1 [(gogoproto.customname)="WebsiteID" ]; 
	null.String code= 2 [(gogoproto.customname)="Code" ,(gogoproto.nullable)=false]; 
	null.String name= 3 [(gogoproto.customname)="Name" ,(gogoproto.nullable)=false]; 
	uint32 sort_order= 4 [(gogoproto.customname)="SortOrder" ]; 
	uint32 default_group_id= 5 [(gogoproto.customname)="DefaultGroupID" ]; 
	bool is_default= 6 [(gogoproto.customname)="IsDefault" ]; 
	StoreGroupCollection StoreGroup = 7 ; // Reversed 1:M store_website.website_id => store_group.website_id 
	StoreCollection Store = 8 ; // Reversed 1:M store_website.website_id => store.website_id 
} 
// StoreWebsiteCollection represents multiple rows for DB table store_website .
// Auto generated.
message StoreWebsiteCollection { 
	repeated StoreWebsite Data = 1; 
} 
